@@ -665,10 +665,7 @@ Standard command to enable vertical scrolling of <I>pathName</I>.
 
 <p>
 A <b>&lt;&lt;ListboxSelect&gt;&gt;</b> virtual event is generated any time the
-selection in the listbox changes.  This is the default behavior of an
-item in the listbox, but it can be overridden with the bindText or
-bindImage command.  If the button 1 binding is overridden, this event may
-not be generated.
+selection in the listbox changes.
 </p>
 
 <p>
